--- a/ecommerce-backend/package.json
+++ b/ecommerce-backend/package.json
@@ -18,11 +18,15 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.4.1",
+    "multer": "^1.4.5-lts.1",
+    "uuid": "^9.0.1",
     "validator": "^13.12.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.13.0",
+    "@types/uuid": "^9.0.8",
     "@types/validator": "^13.11.10",
     "nodemon": "^3.1.2",
     "typescript": "^5.4.5"
