Complete Ecommerce App done

--- a/ecommerce-frontend/.env
+++ b/ecommerce-frontend/.env
@@ -1,14 +1,14 @@
-VITE_FIREBASE_KEY= "AIzaSyD_e5cPEpI2s65qwecOviLbmMFlb30BxnE"
+VITE_FIREBASE_KEY= 
 
-VITE_AUTH_DOMAIN= "mern-ecommerce-b8b5b.firebaseapp.com"
+VITE_AUTH_DOMAIN= 
 
-VITE_PROJECT_ID="mern-ecommerce-b8b5b"
+VITE_PROJECT_ID=
 
-VITE_STORAGE_BUCKET="mern-ecommerce-b8b5b.appspot.com"
+VITE_STORAGE_BUCKET=
 
-VITE_MESSAGING_SENDER_ID= "515261093671"
+VITE_MESSAGING_SENDER_ID= 
 
-VITE_APP_ID="1:515261093671:web:6066bb59cd8b72bbc6fb02"
+VITE_APP_ID=
 
 VITE_SERVER=http://localhost:4000
 
